--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     
     <div id="links">
-                <a class="link" href="/cdn-cgi/l/email-protection#22474f434b4e624f5b4e47510c524f" target="_blank">
+                <a class="link" href="mailto:email@myles.pm" target="_blank">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                         Email        </a>
                 <a class="link" href="https://element.myles.pm" target="_blank">
