--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             width: 400px;
             max-width: calc(100% - 20px);
             height: 75px;
-            padding: 15px 20px;
+            padding: 15px;
             margin: 10px;
             text-decoration: none;
             color: white;
