--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
     <div class="container">
         <h1>Myles' Links</h1>
-        <a href="mailito:email@myles.pm" class="button">Email</a>
+        <a href="mailto:email@myles.pm" class="button">Email</a>
         <a href="https://matrix.myles.pm" class="button">Matrix</a>
         <a href="https://signal.myles.pm" class="button">Signal</a>
         <a href="https://snapchat.myles.pm" class="button">Snapchat</a>
